After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 631050 - Thumbnails get lost when the width of the side pane is changed
Thumbnails get lost when the width of the side pane is changed
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Evince Maintainers
Evince Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-09-30 23:41 UTC by Juanjo Marín
Modified: 2014-03-17 16:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch that re-sets current page when updating the visible range (2.04 KB, patch)
2013-05-16 08:19 UTC, Jonas Danielsson
needs-work Details | Review
Keep current page in visible area when the sidebar is resized (4.92 KB, patch)
2014-03-17 12:28 UTC, Carlos Garcia Campos
committed Details | Review

Description Juanjo Marín 2010-09-30 23:41:26 UTC
The range of thumbnails shown in the side pane is lost when you change the 
width of the side pane. For example, I've got pages 92 - 95, and when the side 
pane turns into two columns of thumbnails, I've got pages 199 - 206.

This presumably misbehaviour is more evident when it is shown the thumbnail of 
the page you're viewing and it get lost when you change the width of the side 
pane.

(Reported by Stephen Dittoe in the evince mailing list, 29 Sep 2010)
Comment 1 Germán Poo-Caamaño 2013-05-09 01:00:05 UTC
I think the problem is the thumbnail view (the scrollview) stays in the same position, but the content changed.  The new pages shown is approximately the double.

It happens when doing the opposite, too.  If the thumbnail view shows 2 columns and the selected is page 94, then when resizing the view to a smaller width the pages shown change to 47-50 (around half the previous one).

If the user moves one page forward or backward, the thumbnail view gets updated.  So, I think there is a missing call to sync method or something like that when the thumbnail view changes.
Comment 2 Jonas Danielsson 2013-05-16 08:19:32 UTC
Created attachment 244376 [details] [review]
Patch that re-sets current page when updating the visible range

Hi!

This patch fix the issue for me, but I'm not sure it is the correct fix.
What do you think?

/Jonas
Comment 3 Germán Poo-Caamaño 2013-11-02 07:30:11 UTC
Review of attachment 244376 [details] [review]:

This patch looks good to me, it applies correctly to master and fixes the issue.

Carlos, Christian: ok to commit?
Comment 4 Germán Poo-Caamaño 2013-11-02 07:30:50 UTC
Probably we would like to apply this one to both, master and 3.10.
Comment 5 Jonas Danielsson 2014-03-16 19:10:43 UTC
What happened to this? :)
Comment 6 Carlos Garcia Campos 2014-03-17 11:41:35 UTC
Review of attachment 244376 [details] [review]:

This patch is wrong, this is called when scrolling up/down in the sidebar, so you can't never scroll to a position where the current page is not visible.
Comment 7 Carlos Garcia Campos 2014-03-17 12:28:53 UTC
Created attachment 272138 [details] [review]
Keep current page in visible area when the sidebar is resized

What about something like this? I think gtk icon view should try to keep the visible area when the number of columns shown changes, though.
Comment 8 Carlos Garcia Campos 2014-03-17 16:28:43 UTC
Comment on attachment 272138 [details] [review]
Keep current page in visible area when the sidebar is resized

Pushed to git master