sidebar-thumbnails: Keep current page in visible area when the sidebar is resized

If the current selection is no longer visible after a seidebar resize,
re-set the current page to make sure it's visible.

https://bugzilla.gnome.org/show_bug.cgi?id=631050